--- a/weather-app/index.html
+++ b/weather-app/index.html
@@ -3,11 +3,27 @@
 
 <head>
     <meta charset="UTF-8" />
-    <title>Document</title>
+    <title>Weather-App</title>
     <link rel="stylesheet" href="./src/style.css"/>
 </head>
 
 <body>
+    <div class="container">
+        <input type="text" id="searchInput" placeholder="Search...."/><br>
+        <button id="submitBtn" type="submit">Submit</button>
+
+    <div class="weather-container">
+        <div class="weather-box">
+            <div class="weather-info">
+                <p>Temprature</p>
+                <p>City</p>
+                <p>Weather</p>
+            </div>
+        </div>
+        <div class="weather-side">
+        </div>
+    </div>
+    </div>
     <script type="text/javascript" src="./src/main.js"></script>
 </body>
 
