--- a/color-changer/index.html
+++ b/color-changer/index.html
@@ -6,7 +6,14 @@
         <link rel="stylesheet" href="./src/style.css"/>
     </head>
     <body>
-
+        <h1>Color Scheme Switcher</h1>
+        <div class="flex-container">
+        <button class="colorButton" id="greyBtn" onclick="greyColor()"></button>
+        <button class="colorButton" id="whiteBtn" onclick="whiteColor()"></button>
+        <button class="colorButton" id="blueBtn" onclick="blueColor()"></button>
+        <button class="colorButton" id="yellowBtn" onclick="yellowColor()"></button>
+        </div>
+        <p id="para">Try clicking on one of the colors above to change the background color of this page!</p>
         <script type="text/javascript" src="./src/main.js"></script>
     </body>
 </html>
