made some changes

--- a/weather-app/index.html
+++ b/weather-app/index.html
@@ -15,9 +15,9 @@
     <div class="weather-container">
         <div class="weather-box">
             <div class="weather-info">
-                <p>Temprature</p>
-                <p>City</p>
-                <p>Weather</p>
+                <p id="tempNumber">Temprature</p>
+                <p id="location">City</p>
+                <p id="weatherInfo">Weather</p>
             </div>
         </div>
         <div class="weather-side">
